make definitionPanel have height to fix jumping around as scroll bar appears/disappears

--- a/web/skins/classic/css/base/views/zone.css
+++ b/web/skins/classic/css/base/views/zone.css
@@ -30,6 +30,14 @@
     margin: 2px;
     text-align: center;
 }
+#definitionPanel:after {
+  content: ".";
+  display: block;
+  height: 0;
+    font-size: 0;
+  clear: both;
+  visibility: hidden;
+}
 
 #definitionPanel input[type=submit],
 #definitionPanel input[type=submit] {
